# turbo_notes

./: .gitignore  .isort.cfg  .pipeline-test.md  Cargo.toml  LICENSE  README.md  TurboNotesRN_FINAL_RELEASE_NOTES.md  TurboNotesRN_v3.0_CHANGELOG.md  build.rs  build.sh  build_android.sh  build_local.sh  check-build-status.sh  install.sh  launch_turbo_notes.sh  local-build.sh  requirements.txt  setup.py  setup_complete.py  turbo_notes.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android-build.yml  ci.yml  quick-test.yml  rust-build.yml
TurboNotesAndroid/: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  sample-notes.csv  sample-notes.json  sample-notes.md  sample-notes.txt  test-ai-features.sh  test-app.sh  test-import-export.sh  verify-apk.sh  vite.config.ts
TurboNotesAndroid/android/: capacitor.settings.gradle
TurboNotesAndroid/src/: ai-service.ts  main.ts
TurboNotesRN/: AI_TROUBLESHOOTING.md  APK_FIX_NOTES.md  App.tsx  INTEGRATION_GUIDE.md  app.json  babel.config.js  build-apk.sh  metro.config.js  package-lock.json  package.json  test-enhanced-features.js  test-improved-ai.js
TurboNotesRN/android/: settings.gradle
TurboNotesRN/ios/: Podfile
android_app/: README.md  buildozer.spec  data_manager.py  main.py  p4a.toml  requirements.txt
buildozer_env/: pyvenv.cfg
scripts/: create_autostart.py
src/: app.rs  autostart.rs  config.rs  lib.rs  main.rs  notes.rs  ui.rs  widget.rs
tests/: __init__.py  test_basic_functionality.py
turbonotes/: __init__.py
(+68 files in other folders)
